--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,13 @@
 </head>
 <body>
   <div class="container">
-    <ul class="nav nav-tabs">
-      <li><%= link_to "Home", welcome_index_path %></li>
-      <li><%= link_to "About", welcome_about_path %></li>
-    </ul>
+    <%= current_user.email %>
+      <ul class="nav nav-tabs">
+        <li><%= link_to "Home", welcome_index_path %></li>
+        <li><%= link_to "About", welcome_about_path %></li>
+      </ul>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
     <%= yield %>
   </div>
 
