--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <div class="container">
       <ul class="nav nav-tabs">
         <li><%= link_to "Home", welcome_index_path %></li>
+        <li><%= link_to "Wikis", wikis_path %></li>
       </ul>
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
