--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,12 @@
       <ul class="nav nav-tabs">
         <li><%= link_to "Home", welcome_index_path %></li>
         <li><%= link_to "Wikis", wikis_path %></li>
+        
+        <% if current_user.premium? || current_user.admin? %>
+          <li><%= link_to "Private Wikis", wikis_path %></li>
+        <% end %>
+        
+        <li class="pull-right"><%= link_to "Upgrade", new_charge_path %></li>
       </ul>
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
