--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,22 +1,27 @@
-<div class="col-md-4">
-    <h1>All Wikis</h1>
-<div>
-    
-    <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-    
-</div>
+<div class="row">
+  <div class="col-md-8">
+    <h1>Wiki List</h1>
     <% @wikis.each do |wiki| %>
     <div class="media">
-    <div class="media-body">
-        <h4 class="media-heading">
+      <div class="media-body">
+        <h3 class="media-heading">
+          <% if wiki.private? %>
+            <% if current_user.admin? || current_user.premium? %>
+              <%= link_to wiki.title, wiki, class: "private" %> <small>Private Wiki</small>
+            <% end %>
+          <% else %>
             <%= link_to wiki.title, wiki %>
-        </h4>
+          <% end %>
+        </h3>
+      </div>
     </div>
-        
-        
-            
-        
-        
-    </div>
-<% end %>
+    <% end %>
+  </div>
+
+  <div class="col-md-4">
+    <% if current_user %>
+      <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+
 </div>
