--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -4,3 +4,7 @@
     <h2>Edit Wiki</h2>
     <%= render partial: 'wikis/form' %>
 </div>
+
+<div class="col-md-6 pull-right down-40">
+    <%= render partial: 'wikis/collaborations' %>
+</div>
