--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -11,5 +11,10 @@
     <% if policy(@wiki).destroy? %>
      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
     <% end %>
+    <div class="row">
+     <div class="col-md-12 pull-right down-40">
+      <%= render partial: 'wikis/collaborations' %>
+     </div>
+    </div>
    </div>
  </div>
